--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,15 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-    <title>React App</title>
+      <!-- favicon -->
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+      <link rel="manifest" href="/site.webmanifest">
+      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#da532c">
+      <meta name="msapplication-TileColor" content="#da532c">
+      <!-- <meta name="theme-color" content="#da532c"> -->
+    <title>Ibomkopa CDS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
