--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,14 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
     <!-- <link rel="manifest" href="/site.webmanifest"> -->
     <link rel="mask-icon" href="image/safari-pinned-tab.svg" color="#da532c">
     <meta name="msapplication-TileColor" content="#da532c">
+    <!-- ios device -->
+    <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png">
+    <meta name="apple-mobile-web-app-status-bar" content="da532c">
     <!-- <meta name="theme-color" content="#da532c"> -->
 
         <!-- Compiled and minified CSS -->
