--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta
+      name="description"
+      content="CDS registration app for Akwa Ibom Corp member"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png">
@@ -17,7 +21,7 @@
     <!-- ios device -->
     <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png">
     <meta name="apple-mobile-web-app-status-bar" content="da532c">
-    <!-- <meta name="theme-color" content="#da532c"> -->
+    <meta name="theme-color" content="#da532c">
 
         <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
